# Econ_AI_TA

./: .gitignore  Readme.md  docker-compse.yaml  install.ps1  install.sh  nigga.session.sql  readme.md
Backend/: .dockerignore  .env.sample  Readme.md  build.ps1  build.sh  docker-compose-example.yaml  docker-compse.yaml  dockerfile  main.py  pyproject.toml  req.txt
Backend/api/v1/: admin.py  authorization.py  chatroom.py  documentation.py  excel.py  management.py  mock.py  result.py
Backend/utils/RAG/: document_handler.py  excel_handler.py  prompt.py  response_handler.py  vector_extractor.py
Backend/utils/RAG/responser/: afs_responser.py  ollama_responser.py  openai_compatible_responser.py  openai_responser.py
Backend/utils/database/: database.py  excel.py  management.py  mock.py  result.py  tag.py  vector_database.py
Backend/utils/helper/: error.py  excel_handler.py  logger.py
Backend/utils/helper/api/: dependency.py
Backend/utils/helper/model/: excel.py
Backend/utils/helper/model/RAG/: local_responser.py  response_handler.py  vector_extractor.py
Backend/utils/helper/model/api/v1/: authorization.py  chatroom.py  excel.py  management.py  mock.py  result.py
Backend/utils/helper/model/database/: database.py  excel.py
Frontend/: .env.sample  build.ps1  build.sh  docker-compose-example.yaml  dockerfile  i18n.ts  next.config.js  package-lock.json  package.json
backend/: .env  .gitignore  docker-compose.yaml  dockerfile  main.py  pyproject.toml  req.txt  第10章.doc  第10章.docx
frontend/: .dockerignore  README.md  build.ps1  dockerfile  package.json  (+2 more)
(+139 files in other folders)
