[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[all]>=0.115.12",
    "mysql-connector-python>=9.2.0",
    "numpy>=2.0.2",
    "ollama>=0.4.7",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
    "pymilvus>=2.5.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "unstructured[docx,pdf,pptx]>=0.17.2",
]
